crates/pg_syntax/tests/snapshots/postgres_regress/tidscan@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.ctid, t1.*, t2.ctid, t2.*\nFROM tidscan t1 LEFT JOIN tidscan t2 ON t1.ctid = t2.ctid WHERE t1.id = 1;"
---
SelectStmt@0..110
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..14 "ctid"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..20
    ColumnRef@16..20
      Ident@16..18 "t1"
      Ascii46@18..19 "."
      AStar@19..20
        Ascii42@19..20 "*"
  Ascii44@20..21 ","
  Whitespace@21..22 " "
  ResTarget@22..29
    ColumnRef@22..29
      Ident@22..24 "t2"
      Ascii46@24..25 "."
      Ident@25..29 "ctid"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..35
    ColumnRef@31..35
      Ident@31..33 "t2"
      Ascii46@33..34 "."
      AStar@34..35
        Ascii42@34..35 "*"
  Newline@35..36 "\n"
  From@36..40 "FROM"
  Whitespace@40..41 " "
  JoinExpr@41..93
    RangeVar@41..51
      Ident@41..48 "tidscan"
      Whitespace@48..49 " "
      Alias@49..51
        Ident@49..51 "t1"
    Whitespace@51..52 " "
    Left@52..56 "LEFT"
    Whitespace@56..57 " "
    Join@57..61 "JOIN"
    Whitespace@61..62 " "
    RangeVar@62..72
      Ident@62..69 "tidscan"
      Whitespace@69..70 " "
      Alias@70..72
        Ident@70..72 "t2"
    Whitespace@72..73 " "
    On@73..75 "ON"
    Whitespace@75..76 " "
    AExpr@76..93
      ColumnRef@76..83
        Ident@76..78 "t1"
        Ascii46@78..79 "."
        Ident@79..83 "ctid"
      Whitespace@83..84 " "
      Ascii61@84..85 "="
      Whitespace@85..86 " "
      ColumnRef@86..93
        Ident@86..88 "t2"
        Ascii46@88..89 "."
        Ident@89..93 "ctid"
  Whitespace@93..94 " "
  Where@94..99 "WHERE"
  Whitespace@99..100 " "
  AExpr@100..109
    ColumnRef@100..105
      Ident@100..102 "t1"
      Ascii46@102..103 "."
      Ident@103..105 "id"
    Whitespace@105..106 " "
    Ascii61@106..107 "="
    Whitespace@107..108 " "
    AConst@108..109
      Iconst@108..109 "1"
  Ascii59@109..110 ";"

