crates/pg_syntax/tests/snapshots/postgres_regress/tidscan@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ctid, * FROM tidscan WHERE '(0,1)' = ctid;"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "ctid"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..14
    ColumnRef@13..14
      AStar@13..14
        Ascii42@13..14 "*"
  Whitespace@14..15 " "
  From@15..19 "FROM"
  Whitespace@19..20 " "
  RangeVar@20..27
    Ident@20..27 "tidscan"
  Whitespace@27..28 " "
  Where@28..33 "WHERE"
  Whitespace@33..34 " "
  AExpr@34..48
    AConst@34..41
      Sconst@34..41 "'(0,1)'"
    Whitespace@41..42 " "
    Ascii61@42..43 "="
    Whitespace@43..44 " "
    ColumnRef@44..48
      Ident@44..48 "ctid"
  Ascii59@48..49 ";"

