crates/pg_syntax/tests/snapshots/postgres_regress/time@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIME_TBL VALUES ('2003-07-07 15:36:39 America/New_York');"
---
InsertStmt@0..69
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "TIME_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..67
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..67
      AConst@29..67
        Sconst@29..67 "'2003-07-07 15:36:39  ..."
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

